# context-fusion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  GUI_USAGE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  gui-public.yml
benchmarks/: BENCHMARK_API_RESULTS.md  BENCHMARK_RESULTS.md  benchmark_agent_loops.py  benchmark_latency.py  benchmark_tokens.py
benchmarks/datasets/: tiny_tasks.jsonl
benchmarks/runners/: run_api_eval.py  run_rag_eval.py  run_tiny_eval.py
configs/: default.yaml
configs/policies/: chat_memory.yaml  coding_agent.yaml  rag_budget.yaml
configs/providers/: anthropic.yaml  local.yaml  openai.yaml
docs/: algorithm.md  architecture.md  cli.md
examples/: ablation_demo.py  memory_compaction_demo.py  multiformat_ingestion_demo.py  rag_context_optimizer.py
examples/gui_input/: REPO_TRACE_PLACEHOLDER.md  gui_test_CF.txt  random.csv
npm-package/: README.md  package.json
scripts/: bootstrap.sh  demo.sh  format.sh  lint.sh  test.sh
src/context_portfolio_optimizer/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  logging_utils.py  settings.py  types.py  version.py  web_ui.py
src/context_portfolio_optimizer/ablations/: __init__.py  leave_one_out.py  runner.py
src/context_portfolio_optimizer/agents/: __init__.py  agent_runner.py
src/context_portfolio_optimizer/allocation/: __init__.py  budget.py  knapsack.py  latency_cost.py  multi_objective.py  planner.py  portfolio.py  value_density.py
src/context_portfolio_optimizer/assembly/: __init__.py  agent_packer.py  chat_packer.py  code_packer.py  compiler.py  provider_formatters.py  qa_packer.py
src/context_portfolio_optimizer/caching/: __init__.py  keys.py  packet_cache.py  segments.py
src/context_portfolio_optimizer/compression/: __init__.py  citation_map.py  json_minify.py  policies.py  schema_prune.py
src/context_portfolio_optimizer/config/: __init__.py  budget_profiles.py  defaults.py
src/context_portfolio_optimizer/dedup/: __init__.py  ast_hash.py  hashing.py  normalized_hash.py  semantic_dedup.py
src/context_portfolio_optimizer/evaluators/: __init__.py  cost.py  quality.py  reward.py
src/context_portfolio_optimizer/fusion/: __init__.py  delta.py  incremental.py  packet_diff.py
src/context_portfolio_optimizer/ingestion/: __init__.py  base_loader.py  code_loader.py  csv_loader.py  dispatcher.py  docx_loader.py  image_loader.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py
src/context_portfolio_optimizer/integrations/: __init__.py  langchain.py  llamaindex.py
src/context_portfolio_optimizer/ir/: __init__.py  cache_segment.py  context_packet.py  delta_packet.py  fingerprints.py
src/context_portfolio_optimizer/mcp_server/: __init__.py  resources.py  server.py  tools.py
src/context_portfolio_optimizer/memory/: __init__.py  compaction.py  retention.py  store.py
src/context_portfolio_optimizer/normalization/: __init__.py  block_builder.py  metadata_extractor.py  structure_detector.py
src/context_portfolio_optimizer/orchestration/: __init__.py  context_builder.py  planner.py  runner.py
src/context_portfolio_optimizer/precompute/: __init__.py  embeddings.py  runner.py  store.py  summaries.py  token_stats.py
src/context_portfolio_optimizer/providers/: __init__.py  anthropic.py  base.py  base_provider.py  mock_provider.py  ollama.py  openai.py  openai_compatible.py  openai_provider.py  registry.py  tokenizers.py
src/context_portfolio_optimizer/representations/: __init__.py  agent.py  base_representation.py  bullet_summary.py  citation_pointer.py  citations.py  code.py  code_signature_summary.py  compact.py  extracted_facts.py  full_text.py  qa.py  registry.py  structured_json.py  table_summary.py
src/context_portfolio_optimizer/retrieval/: __init__.py  bm25.py  candidate_pipeline.py  lexical.py  metadata_filters.py  query_classifier.py  reranker.py
src/context_portfolio_optimizer/scoring/: __init__.py  features.py  risk_model.py  utility_model.py
src/context_portfolio_optimizer/utils/: __init__.py  hashing.py  json_io.py  similarity.py  text_utils.py  timing.py  tokenization.py  yaml_io.py
tests/: TEST_RESULTS.md  __init__.py  test_budget_profiles.py  test_cache_segments.py  test_cli.py  test_compact_representations.py  test_compiler.py  test_context_packet.py  test_dedup.py  test_delta_fusion.py  test_ingestion.py  test_knapsack.py  test_latency_planner.py  test_portfolio_allocation.py  test_precompute.py  test_provider_compilation.py  test_provider_registry.py  test_representation_generation.py  test_retrieval.py
tests/integration/: __init__.py  test_pipeline.py
web/pages/: index.html
